<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:layout_margin="@dimen/normalMargin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
      style="@style/NormalTextView"
      android:id="@+id/tvDesc"
      android:textAlignment="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/text_app_desc"
      android:layout_marginTop="@dimen/normalMargin"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/layoutUsername"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:errorEnabled="true"
      android:layout_marginTop="@dimen/normalMargin"
      app:layout_constraintTop_toBottomOf="@id/tvDesc"
      app:layout_constraintStart_toStartOf="parent">
        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editUsername"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/text_username_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/layoutPassword"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:errorEnabled="true"
      app:passwordToggleEnabled="true"
      android:layout_marginTop="@dimen/normalMargin"
      app:layout_constraintTop_toBottomOf="@id/layoutUsername"
      app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/editPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/text_password_hint"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
      android:layout_width="match_parent"
      android:layout_height="60dp"
      android:text="@string/text_login_label"
      android:textColor="@android:color/white"
      android:textSize="@dimen/textSizeNormal"
      android:layout_marginTop="@dimen/normalMargin"
      app:layout_constraintTop_toBottomOf="@id/layoutPassword"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>